# RayV-Paint

./: .gitignore  CMakeLists.txt  DOCS.MD  Documentation.MD  ISSUES.MD  SETUP.md  build.bat  config.json  imgui.ini  run_tests.bat  test_16k.py  test_api_comfy_surface.py  test_doc_smoke.py  test_ops_smoke.py  test_script.py  test_unusual_scenarios.py  ux_questionnaire.txt
70064674-d83b-40a6-97ea-4d9afdd8406e/: implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved.0  task.md.metadata.json  task.md.resolved
ai-answers/: Canvas.cpp.patches.md  ClaudeDialogue.txt  GpuFxDispatch.cpp  GpuFxDispatch.h  LayerFx.hlsl  LayerStyles.refactored.cpp  LayerStyles.refactored.h
assets/: README.md
assets/configs/: default_export.rvpcf
assets/scripts/: README.md  tiled_export.py
assets/textures/: black.rvpaf  checker.rvpaf  gradient_h.rvpaf  gradient_v.rvpaf  grid.rvpaf  noise.rvpaf  sample_example.rvpaf  sample_ico.rvpaf  soft_dot.rvpaf  stripes.rvpaf  transparent.rvpaf  white.rvpaf
helper_microservices/: CMakeLists.txt  README.md  main.cpp  resources.rc
helper_microservices/atlas/: AtlasPacker.cpp  AtlasPacker.h  PngIo.cpp  PngIo.h
helper_microservices/common/: BatchCollector.cpp  BatchCollector.h  SettingsStore.cpp  SettingsStore.h  Utf8.h
helper_microservices/convert/: FormatCatalog.h  TexconvRunner.cpp  TexconvRunner.h
helper_microservices/shell/: HelperShellRegister.cpp  HelperShellRegister.h
helper_microservices/ui/: AtlasUi.cpp  AtlasUi.h  ConverterUi.cpp  ConverterUi.h  Dx11ImGuiApp.cpp  Dx11ImGuiApp.h  HubUi.cpp  HubUi.h
krita-reference/: analyse.md
krita-reference/update-system/: kis_simple_update_queue.cpp
plans/: ADVANCED_MOD_MODE_AND_3D_PREVIEW.md  API_STANDARTIZATION.md  ASSET_BROWSER.md  BRUSH_ENGINE_EXPANSION.md  BRUSH_PRESETS.md  BUILD16_CLEANUP_OPTIMIZATION.md  COLOR_DDS_BITDEPTH_PLAN.md  CORE_UI_CONTRACT.md  ClaudeAnswer.md  Commit4.md  DIRECTXTEX_NATIVE_DDS_PLAN.md  EMERGENCY_SAFE_PLAN.MD  ForFuture.md  GPU_DRIVEN_PIPELINE.md  P2_BITDEPTH.md  PART1_STATUS.md  PART2_UI_AGENT_PROMPT.md  PLAN1_LAYER_FX_FILL_FOUNDATION.md  PLAN2_LAYER_FX_FILL_FEATURES_UI.md  SPLIT_PLAN.md  TEXTURE_SET_CORE.md  UI_AGENT_PROMPT.md  UI_REWORK_STAGE_1_2.md  UI_RULES.md  VECTOR_LAYERS.md  build_plan.md  core_architecture_handoff.md  dx12_migration_plan.md  paintdotnet.md
plans/Standartization(Krita/: Photoshop).MD
research/: xxmi_research.md
research/zzz-materials/: 26214fb5eedfcbdd-vs_replace.hlsl  6883e4375b728e90-vs_replace.hlsl  89ea088388fc8cd1-ps_replace.hlsl  8f62f3e60b158eb0-ps_replace.hlsl  9c0b5ddd089bbcc0-ps_replace.hlsl  f776a44ac6faf849-ps_replace.hlsl  zzz_materials_research.md
scripts/: gen_ui_icons.py  register_dds_thumbs.bat
src/: Canvas.cpp  Canvas.h  CanvasAdjustments.cpp  CanvasFileIO.cpp  CanvasLayers.cpp  CanvasPaint.cpp  CanvasRendererDX12.cpp  CanvasRendererDX12.h  CanvasSelection.cpp  CanvasTransforms.cpp  CanvasUndo.cpp  main.cpp
src/assets/: AssetLibraryIndex.cpp  AssetLibraryIndex.h  AssetManager.cpp  AssetManager.h  AssetStore.cpp  AssetStore.h  AssetThumbCache.cpp  AssetThumbCache.h  AssetTypes.cpp  AssetTypes.h
src/core/: AsyncFilterJob.cpp  AsyncFilterJob.h  AutoSaveManager.cpp  AutoSaveManager.h  BenchmarkRunner.cpp  BenchmarkRunner.h  BrushLibrary.cpp  BrushLibrary.h  ClipboardHelper.cpp  ClipboardHelper.h  ConfigManager.cpp  ConfigManager.h  CrashGuard.cpp  CrashGuard.h  DdsCodec.cpp  DdsCodec.h  DdsHelper.cpp  DdsHelper.h  GpuFxBlur.cpp  GpuFxBlur.h  GpuStagingUpload.cpp  GpuStagingUpload.h  GpuTileStore.cpp  GpuTileStore.h  HalfFloat.h  IccProfiles.cpp  IccProfiles.h  ImageManager.cpp  ImageManager.h  JobManager.cpp  JobManager.h  KeymapManager.cpp  KeymapManager.h  Logger.cpp  Logger.h  MaskTiles.cpp  MaskTiles.h  MemoryStats.cpp  MemoryStats.h  Notifications.cpp  (+20 more)
src/launchers/: RayVPaint_Console_Launcher.cpp  RayVPaint_Launcher.cpp
src/layer/: LayerStyles.cpp  LayerStyles.h  LayerTypes.h
src/modio/: ModIniParser.cpp  ModIniParser.h  ModTypes.cpp  ModTypes.h  VertexLayout.cpp  VertexLayout.h
src/package/: PackageIO.cpp  PackageIO.h  PackageTypes.h
src/preview3d/: MaterialConfig.cpp  MaterialConfig.h  MeshGpu.cpp  MeshGpu.h  PreviewRenderer.cpp  PreviewRenderer.h  RenderPasses.cpp  RenderPasses.h
src/render/: Dx12AsyncUploader.cpp  Dx12AsyncUploader.h  Dx12Device.cpp  Dx12Device.h  GpuComputeTools.cpp  GpuComputeTools.h
src/resources/: resources.rc
src/scripting/: ScriptDocApi.cpp  ScriptDocApi.h  ScriptDockRegistry.cpp  ScriptDockRegistry.h  ScriptImage.cpp  ScriptImage.h  ScriptMainThread.cpp  ScriptMainThread.h  ScriptPluginHost.cpp  ScriptPluginHost.h  ScriptUiPreview.cpp  ScriptUiPreview.h  ScriptViewApi.cpp  ScriptViewApi.h  ScriptingEngine.cpp  ScriptingEngine.h
src/shaders/: Canvas.hlsl  CanvasTiles.hlsl  FloodFill.hlsl  LayerFxBlur.hlsl  Preview3D.hlsl  Preview3D_Outline.hlsl
src/shell/: DdsHeaderInfo.cpp  DdsHeaderInfo.h  DdsPropertyHandler.cpp  DdsThumb.def  DdsThumbDecode.cpp  DdsThumbDecode.h  DdsThumbRegister.cpp  DdsThumbRegister.h  DdsThumbnailHandler.cpp  RayVPaint.Dds.propdesc
src/texset/: TextureSet.cpp  TextureSet.h  TextureSetIO.cpp  TextureSetIO.h  TextureSetTypes.cpp  TextureSetTypes.h
src/ui/: EditorPanels.cpp  (+3 more)
tasks/: ARCHITECTURE.md  NOTES_performance_issues.md  STATUS_REPORT.md  TASK_03_mask_dirty_tracking.md  TASK_04_dx12_device_class.md  TASK_05_canvas_split.md  TASK_06_floating_tilecache.md  TASK_07_async_upload_queue.md  TASK_09_vram_overflow_recovery.md  TASK_10_tiled_cpu_operations.md  TASK_11_render_pipeline_crash_fix.md  TASK_12_point_sampling.md  TASK_13_large_texture_crash_fix.md  TASK_14_memory_statusbar.md  TASK_15_test_scripts.md
terminals/: 1.txt  2.txt  3.txt
testfield/: SandroneBangsADiffuse.dds  SandroneBangsALightMap — копия.dds  SandroneBangsALightMap.dds  SandroneBangsANormalMap.dds  config.json  imgui.ini  keymap.json
tests/: run_tests.ps1  setup_path.ps1  test_brush.ps1  test_memory_leak.ps1  test_unit.ps1  test_vram.ps1
tools/: extract_b16_panels.py  fix_mojibake.py  patch_editor_panels_calls.py
(+89 files in other folders)
